fixed tests and spotbugs issues